<resources>
    <string name="app_name">SpendingsApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="show_spendings_stats">Show spendings stats</string>
    <string name="group_views_available">Views</string>
    <string name="watch_by_categories">Watch by categories</string>
    <string name="watch_spendings_stats">Watch stats</string>
    <string name="group_settings">Settings</string>
    <string name="main_menu">Main menu</string>
    <string name="no_categories_defined">No categories defined!</string>
    <string name="manage_categories">Manage categories</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_category">Add category</string>
    <string name="add_category_name">input category name</string>
    <string name="category_added">Category added</string>
    <string name="edit_category">Edit category</string>
    <string name="all_categories_identifier">All</string>
    <string name="choose_category">Choose category</string>
    <string name="add_spending">Add spending</string>
    <string name="title_hint">Input spending title</string>
    <string name="hint_value">Input spending value</string>
    <string name="hint_date">Input date</string>
    <string name="edit_spending">Edit spending</string>
    <string name="delete_text">Delete</string>
    <string name="hint_date_through">Date through</string>
    <string name="hint_date_from">Date from</string>
    <string name="spendings_sum">Spendings sum:</string>
    <string name="exception_category_name_exists">Category name already exists!</string>
    <string name="exception_date_field_empty">Date field cannot be empty!</string>
    <string name="exception_date_fom_future">Date from future!</string>
    <string name="exception_title_too_short">Title is to short!</string>
    <string name="exception_other">Unexpected exception!</string>
    <string name="exception_category_name_empty">Category name cannot be empty!</string>
    <string name="exception_value_empty">Empty value!</string>
</resources>
