<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/group_views_available">
        <menu>
            <item
                android:id="@+id/nav_view_categories"
                android:icon="@drawable/ic_menu_categories"
                android:title="@string/watch_by_categories" />
            <item
                android:id="@+id/nav_views_spendings_stats"
                android:icon="@drawable/ic_menu_stats"
                android:title="@string/watch_spendings_stats" />
        </menu>
    </item>

    <item android:title="@string/group_settings">
        <menu>
            <item
                android:id="@+id/nav_settings_manage_category"
                android:icon="@drawable/ic_menu_sett"
                android:title="@string/manage_categories" />
        </menu>
    </item>

</menu>
