<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date_from"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/hint_date_from"
            android:inputType="datetime" />

        <Button
            android:id="@+id/bt_date_from"
            android:layout_width="48px"
            android:layout_height="48px"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/calendar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date_through"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/hint_date_through"
            android:inputType="datetime" />

        <Button
            android:id="@+id/bt_date_through"
            android:layout_width="48px"
            android:layout_height="48px"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/calendar" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_get_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_spendings_stats" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="@string/spendings_sum" />

        <TextView
            android:id="@+id/tv_spendings_sum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

    </LinearLayout>

</LinearLayout>
